--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/platform-browser": "~8.1.3",
     "@angular/platform-browser-dynamic": "~8.1.3",
     "@angular/router": "~8.1.3",
-    "devextreme": "latest",
+    "devextreme": "^20.2.5",
     "devextreme-angular": "latest",
     "devextreme-schematics": "^1.0.8",
     "rxjs": "~6.4.0",
